--- a/contact.html
+++ b/contact.html
@@ -113,52 +113,51 @@
 
 
 
-    <!-- Contact Start -->
-    <div class="container-fluid p-5">
-        <div class="mb-5 text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px; margin: auto;">
-            <h5 class="section-title">Contact Us</h5>
-            <h1 class="display-3">Get In Touch</h1>
-        </div>
-        <div class="row g-5">
-            <div class="col-lg-6">
-                <div class="bg-light rounded h-100 p-5">
-                    <h5 class="lh-base text-center mb-4">Get in touch with our friendly representatives for pre-booking or other queries you might have regarding us.</h5>
-                    <form>
-                        <div class="row g-3">
-                            <div class="col-6">
-                                <input type="text" class="form-control bg-white border-0 px-4" placeholder="Your Name" style="height: 55px;">
-                            </div>
-                            <div class="col-6">
-                                <input type="email" class="form-control bg-white border-0 px-4" placeholder="Your Email" style="height: 55px;">
-                            </div>
-                            <div class="col-12">
-                                <input type="text" class="form-control bg-white border-0 px-4" placeholder="Subject" style="height: 55px;">
-                            </div>
-                            <div class="col-12">
-                                <textarea class="form-control bg-white border-0 px-4 py-3" rows="4" placeholder="Message"></textarea>
-                            </div>
-                            <div class="col-12">
-                                <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
-                            </div>
+   <!-- Contact Start -->
+<div class="container-fluid p-5">
+    <div class="mb-5 text-center" style="max-width: 700px; margin: auto;">
+        <h5 class="section-title">Contact Us</h5>
+        <h1 class="display-3">Get In Touch</h1>
+    </div>
+    <div class="row g-5">
+        <div class="col-lg-6">
+            <div class="bg-light rounded h-100 p-5">
+                <h5 class="lh-base text-center mb-4">
+                    Get in touch with our friendly representatives for pre-booking or other queries you might have.
+                </h5>
+                <form action="sendmail.php" method="POST" id="contactForm">
+                    <div class="row g-3">
+                        <div class="col-6">
+                            <input type="text" name="name" class="form-control bg-white border-0 px-4" placeholder="Your Name" style="height: 55px;" required>
                         </div>
-                    </form>
-                </div>
+                        <div class="col-6">
+                            <input type="email" name="email" class="form-control bg-white border-0 px-4" placeholder="Your Email" style="height: 55px;" required>
+                        </div>
+                        <div class="col-12">
+                            <input type="text" name="subject" class="form-control bg-white border-0 px-4" placeholder="Subject" style="height: 55px;" required>
+                        </div>
+                        <div class="col-12">
+                            <textarea name="message" class="form-control bg-white border-0 px-4" rows="4" placeholder="Message" required></textarea>
+                        </div>
+                        <div class="col-12">
+                            <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
+                        </div>
+                    </div>
+                </form>
+                <div id="formMessage" style="margin-top: 15px; text-align:center;"></div>
             </div>
-            <div class="col-lg-6">
-                <!-- <iframe class="w-100 rounded"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                    frameborder="0" style="height: 100%; min-height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
-                    tabindex="0"></iframe> -->
-
-                    <iframe 
-                    src="https://www.google.com/maps?q=Grampians%20Restaurant%20Cafe%20Halls%20Gap&output=embed"
-                    loading="lazy" style="height: 100%; width: 100%; min-height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
-                    tabindex="0">
-                </iframe>
-            </div>
+        </div>
+        <div class="col-lg-6">
+            <iframe 
+                src="https://www.google.com/maps?q=Grampians%20Restaurant%20Cafe%20Halls%20Gap&output=embed"
+                loading="lazy" style="height: 100%; width: 100%; min-height: 300px; border:0;" allowfullscreen=""
+                aria-hidden="false" tabindex="0">
+            </iframe>
         </div>
     </div>
-    <!-- Contact End -->
+</div>
+<!-- Contact End -->
+
 
 
     <!-- Instagram Start -->
