--- a/reservation.html
+++ b/reservation.html
@@ -140,68 +140,94 @@
         
                     <h4 class="mb-4 text-center">Fill in your details</h4>
 
-                        <form action="sendmail.php" method="POST" id="reservationForm">                        <div class="row g-3">
+                        <form action="sendmail.php" method="POST" id="reservationForm">
+                            <div class="row g-3">
 
-                            <input type="hidden" name="type" value="reservation">
+                                <!-- REQUIRED FOR BACKEND ROUTING -->
+                                <input type="hidden" name="type" value="reservation">
 
-                            <div class="col-md-6">
-                                <input type="text" class="form-control border-0 bg-light px-4"
-                                       placeholder="Your Name" style="height:55px;">
-                            </div>
+                                <div class="col-md-6">
+                                    <input type="text"
+                                        name="name"
+                                        class="form-control border-0 bg-light px-4"
+                                        placeholder="Your Name"
+                                        style="height:55px;"
+                                        required>
+                                </div>
 
-                            <div class="col-md-6">
-                                <input type="email" class="form-control border-0 bg-light px-4"
-                                       placeholder="Your Email" style="height:55px;">
-                            </div>
+                                <div class="col-md-6">
+                                    <input type="email"
+                                        name="email"
+                                        class="form-control border-0 bg-light px-4"
+                                        placeholder="Your Email"
+                                        style="height:55px;"
+                                        required>
+                                </div>
 
-                            <div class="col-md-6">
-                                <input type="tel" class="form-control border-0 bg-light px-4"
-                                       placeholder="Phone Number" style="height:55px;">
-                            </div>
+                                <div class="col-md-6">
+                                    <input type="tel"
+                                        name="phone"
+                                        class="form-control border-0 bg-light px-4"
+                                        placeholder="Phone Number"
+                                        style="height:55px;"
+                                        required>
+                                </div>
 
-                            <div class="col-md-6">
-                                <select class="form-select border-0 bg-light px-4" style="height:55px;">
-                                    <option selected>No. of Guests</option>
-                                    <option>1 Person</option>
-                                    <option>2 Persons</option>
-                                    <option>3 Persons</option>
-                                    <option>4 Persons</option>
-                                    <option>5+ Persons</option>
-                                </select>
-                            </div>
+                                <div class="col-md-6">
+                                    <select name="guests"
+                                            class="form-select border-0 bg-light px-4"
+                                            style="height:55px;"
+                                            required>
+                                        <option value="">No. of Guests</option>
+                                        <option value="1 Person">1 Person</option>
+                                        <option value="2 Persons">2 Persons</option>
+                                        <option value="3 Persons">3 Persons</option>
+                                        <option value="4 Persons">4 Persons</option>
+                                        <option value="5+ Persons">5+ Persons</option>
+                                    </select>
+                                </div>
 
-                            <div class="col-md-6">
-                                <input type="date" class="form-control border-0 bg-light px-4"
-                                       style="height:55px;">
-                            </div>
+                                <div class="col-md-6">
+                                    <input type="date"
+                                        name="date"
+                                        class="form-control border-0 bg-light px-4"
+                                        style="height:55px;"
+                                        required>
+                                </div>
 
-                            <div class="col-md-6">
-                                <select class="form-select border-0 bg-light px-4" style="height:55px;">
-                                    <option selected>Preferred Time</option>
-                                    <option>08:00 AM</option>
-                                    <option>10:00 AM</option>
-                                    <option>12:00 PM</option>
-                                    <option>02:00 PM</option>
-                                    <option>04:00 PM</option>
-                                    <option>06:00 PM</option>
-                                    <option>08:00 PM</option>
-                                </select>
-                            </div>
+                                <div class="col-md-6">
+                                    <select name="time"
+                                            class="form-select border-0 bg-light px-4"
+                                            style="height:55px;"
+                                            required>
+                                        <option value="">Preferred Time</option>
+                                        <option value="08:00 AM">08:00 AM</option>
+                                        <option value="10:00 AM">10:00 AM</option>
+                                        <option value="12:00 PM">12:00 PM</option>
+                                        <option value="02:00 PM">02:00 PM</option>
+                                        <option value="04:00 PM">04:00 PM</option>
+                                        <option value="06:00 PM">06:00 PM</option>
+                                        <option value="08:00 PM">08:00 PM</option>
+                                    </select>
+                                </div>
 
-                            <div class="col-12">
-                                <textarea class="form-control border-0 bg-light px-4 py-3"
-                                          rows="4" placeholder="Special Requests"></textarea>
-                            </div>
+                                <div class="col-12">
+                                    <textarea name="request"
+                                            class="form-control border-0 bg-light px-4 py-3"
+                                            rows="4"
+                                            placeholder="Special Requests"></textarea>
+                                </div>
 
-                            <div class="col-12">
-                                <button class="btn btn-primary w-100 py-3">
-                                    Book Table Now
-                                </button>
-                            </div>
+                                <div class="col-12">
+                                    <button type="submit" class="btn btn-primary w-100 py-3">
+                                        Book Table Now
+                                    </button>
+                                </div>
 
                             </div>
                         </form>
-                        <div id="formMessage" style="margin-top: 15px; text-align:center;"></div>
+
+                        <div id="reservationMessage" class="mt-3"></div>
 
 
                     <!-- Extra Note -->
