--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
                 <h5 class="lh-base text-center mb-4">
                     Get in touch with our friendly representatives for pre-booking or other queries you might have.
                 </h5>
-                <form method="POST" id="contactForm">
+                <form id="contactForm" action="sendmail.php" method="post" onsubmit="return false;">
                     <div class="row g-3">
                         <input type="hidden" name="type" value="contact">
                         <div class="col-6">
