--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
                 <h5 class="lh-base text-center mb-4">
                     Get in touch with our friendly representatives for pre-booking or other queries you might have.
                 </h5>
-                <form action="sendmail.php" method="POST" id="contactForm">
+                <form id="contactForm" method="POST" action="sendmail.php">
                     <div class="row g-3">
                         <input type="hidden" name="type" value="contact">
                         <div class="col-6">
@@ -343,6 +343,7 @@ tabindex="0">
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
