--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,9 @@
                             <textarea name="message" class="form-control bg-white border-0 px-4" rows="4" placeholder="Message" required></textarea>
                         </div>
                         <div class="col-12">
-                            <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
+                            <button class="btn btn-primary w-100 py-3" type="button" id="contactSubmit">
+                                Send Message
+                            </button>
                         </div>
                     </div>
                 </form>
@@ -269,13 +271,13 @@
                     </div>
 
                     <!-- Opening Hours -->
-    <div class="d-flex mb-2">
-        <i class="bi bi-clock text-primary me-2"></i>
-        <p class="mb-0">
-            Opening Hours: 8:00 AM – 8:00 PM<br>
-            <span class="opacity-75">7 Days a Week</span>
-        </p>
-    </div>
+                    <div class="d-flex mb-2">
+                        <i class="bi bi-clock text-primary me-2"></i>
+                        <p class="mb-0">
+                            Opening Hours: 8:00 AM – 8:00 PM<br>
+                            <span class="opacity-75">7 Days a Week</span>
+                        </p>
+                    </div>
                 
                     <div class="d-flex mt-4">
                         <a class="btn btn-primary btn-square rounded-circle me-2" href="#">
