--- a/contact.html
+++ b/contact.html
@@ -130,21 +130,27 @@
                 <h5 class="lh-base text-center mb-4">
                     Get in touch with our friendly representatives for pre-booking or other queries you might have.
                 </h5>
-                <form id="contactForm" method="POST" novalidate>
+                <form action="sendmail.php" method="POST" id="contactForm">
+                    <div class="row g-3">
                         <input type="hidden" name="type" value="contact">
-
-                        <input type="text" name="name" placeholder="Your Name" required>
-                        <input type="email" name="email" placeholder="Your Email" required>
-                        <input type="text" name="subject" placeholder="Subject" required>
-                        <textarea name="message" placeholder="Message" required></textarea>
-
-                        <button type="button" id="contactSubmit" class="btn btn-primary">
-                            Send Message
-                        </button>
-                    </form>
-
-                <div id="formMessage" class="mt-3 text-center"></div>
-
+                        <div class="col-6">
+                            <input type="text" name="name" class="form-control bg-white border-0 px-4" placeholder="Your Name" style="height: 55px;" required>
+                        </div>
+                        <div class="col-6">
+                            <input type="email" name="email" class="form-control bg-white border-0 px-4" placeholder="Your Email" style="height: 55px;" required>
+                        </div>
+                        <div class="col-12">
+                            <input type="text" name="subject" class="form-control bg-white border-0 px-4" placeholder="Subject" style="height: 55px;" required>
+                        </div>
+                        <div class="col-12">
+                            <textarea name="message" class="form-control bg-white border-0 px-4" rows="4" placeholder="Message" required></textarea>
+                        </div>
+                        <div class="col-12">
+                            <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
+                        </div>
+                    </div>
+                </form>
+                <div id="formMessage" style="margin-top: 15px; text-align:center;"></div>
             </div>
         </div>
         <div class="col-lg-6">
