--- a/contact.html
+++ b/contact.html
@@ -133,11 +133,21 @@
                 <form action="sendmail.php" method="POST" id="contactForm">
                     <div class="row g-3">
                         <input type="hidden" name="type" value="contact">
-                        <div class="col-6">
-                            <input type="text" name="name" class="form-control bg-white border-0 px-4" placeholder="Your Name" style="height: 55px;" required>
+                        <div class="col-md-6">
+                                    <input type="text"
+                                        name="name"
+                                        class="form-control border-0 bg-light px-4"
+                                        placeholder="Your Name"
+                                        style="height:55px;"
+                                        required>
                         </div>
-                        <div class="col-6">
-                            <input type="email" name="email" class="form-control bg-white border-0 px-4" placeholder="Your Email" style="height: 55px;" required>
+                        <div class="col-md-6">
+                            <input type="email"
+                                name="email"
+                                class="form-control border-0 bg-light px-4"
+                                placeholder="Your Email"
+                                style="height:55px;"
+                                required>
                         </div>
                         <div class="col-12">
                             <input type="text" name="subject" class="form-control bg-white border-0 px-4" placeholder="Subject" style="height: 55px;" required>
